--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ footer {
 }
 /*responsividade - mínimo de tela em 600px*/
 @media only screen and (max-width: 600px) {
+    main{width: 100%;}
     aside {
         display: none;
     }
